--- a/menu.html
+++ b/menu.html
@@ -19,20 +19,127 @@
       href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
       type="image/x-icon"
     />
-    <style></style>
+    <style>
+      /* Chat Bubble / Window */
+      .chat-bubble {
+        position: fixed;
+        bottom: 1rem;
+        right: 1rem;
+        width: 60px;
+        height: 60px;
+        background-color: #198754;
+        color: white;
+        border-radius: 50%;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        /* Use a lower, but still high z-index */
+        z-index: 1040; /* LOWER z-index */
+        transition: transform 0.2s ease-in-out;
+      }
+      .chat-bubble:hover {
+        transform: scale(1.1);
+      }
+
+      /* Make the active selector slightly more specific using 'body' */
+      body .chat-window {
+        /* Added body selector */
+        position: fixed;
+        right: 1rem;
+        bottom: 1rem; /* Default bottom */
+        width: 350px;
+        height: 450px;
+        background-color: #f8f9fa;
+        border: 1px solid #dee2e6;
+        border-radius: 0.375rem;
+        box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+        /* Use a significantly higher z-index */
+        z-index: 1060; /* HIGHER z-index */
+        display: none;
+        flex-direction: column;
+        transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out,
+          bottom 0.3s ease-in-out;
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+      /* This class is ADDED by JS to show the window */
+      body .chat-window.active {
+        /* Added body selector */
+        display: flex !important; /* Keep !important here for good measure if needed */
+        opacity: 1;
+        transform: translateY(0);
+        /* === INCREASED GAP in calculation === */
+        /* Make the gap larger (e.g., 1rem instead of 0.5rem) */
+        bottom: calc(1rem + 60px + 1rem); /* Increased gap */
+        /* =================================== */
+      }
+
+      .chat-header {
+        /* Styles for header (bg-success, text-white etc handled by Bootstrap classes) */
+        padding: 0.5rem 1rem; /* Adjust padding if needed */
+        border-top-left-radius: 0.375rem;
+        border-top-right-radius: 0.375rem;
+      }
+
+      .chat-messages {
+        padding: 1rem;
+        flex-grow: 1; /* Take up available vertical space */
+        overflow-y: auto; /* Allow scrolling for messages */
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+
+      .chat-message.bot span {
+        background-color: #e9ecef;
+        border-radius: 15px 15px 15px 0;
+        max-width: 85%;
+        padding: 0.5rem 0.75rem; /* Added padding */
+        display: inline-block; /* Needed for max-width */
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+      }
+
+      .chat-message.user {
+        text-align: right;
+      }
+
+      .chat-message.user span {
+        background-color: #d1e7dd; /* Success-subtle */
+        border-radius: 15px 15px 0 15px;
+        display: inline-block;
+        max-width: 85%;
+        text-align: left;
+        padding: 0.5rem 0.75rem; /* Added padding */
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+      }
+
+      .chat-input {
+        padding: 0.5rem;
+        border-top: 1px solid #dee2e6;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <header
         class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
       >
-      <a
-      href="index.html"
-      class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none navbar-brand"
-    >
-      <img src="https://cdn-icons-png.flaticon.com/512/5077/5077571.png" alt="Logo" width="30" height="24" class="d-inline-block mx-2 mt-2 align-text-top">
-      <span class="fs-4">The Greenery</span>
-    </a>
+        <a
+          href="index.html"
+          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none navbar-brand"
+        >
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
+            alt="Logo"
+            width="30"
+            height="24"
+            class="d-inline-block mx-2 mt-2 align-text-top"
+          />
+          <span class="fs-4">The Greenery</span>
+        </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a
@@ -94,11 +201,21 @@
       </div>
 
       <div class="alert alert-success text-center" role="alert">
-        <h4 class="alert-heading"><i class="bi bi-people-fill me-2"></i>Planning an Event or Need a Quick Meal?</h4>
-        <p>We offer catering services for gatherings big and small! Check out our popular Combo Meals below for great value deals.</p>
-        <hr>
-        <p class="mb-0">For catering inquiries, please visit our <a href="contact.html" class="alert-link">Contact Page</a> or email us at catering@thegreenery.com</p>
-    </div>
+        <h4 class="alert-heading">
+          <i class="bi bi-people-fill me-2"></i>Planning an Event or Need a
+          Quick Meal?
+        </h4>
+        <p>
+          We offer catering services for gatherings big and small! Check out our
+          popular Combo Meals below for great value deals.
+        </p>
+        <hr />
+        <p class="mb-0">
+          For catering inquiries, please visit our
+          <a href="contact.html" class="alert-link">Contact Page</a> or email us
+          at catering@thegreenery.com
+        </p>
+      </div>
 
       <!-- Tab Navigation for Categories -->
       <ul
@@ -400,39 +517,49 @@
             </div>
           </div>
           <h3 class="mt-5 mb-3 text-success border-top pt-3">Combo Meals</h3>
-                 <div class="row row-cols-1 row-cols-md-2 g-4"> <!-- Use 2 columns for combos -->
-                    <div class="col">
-                        <div class="card h-100 shadow-sm">
-                          <img
+          <div class="row row-cols-1 row-cols-md-2 g-4">
+            <!-- Use 2 columns for combos -->
+            <div class="col">
+              <div class="card h-100 shadow-sm">
+                <img
                   src="media/burger--fries.jpg"
                   class="card-img-top"
                   alt="Spicy Peanut Noodles"
                   style="height: 200px; object-fit: cover"
                 />
-                           <div class="card-body d-flex flex-column">
-                               <h5 class="card-title">Burger Combo</h5>
-                               <p class="card-text">Beyond Burger Deluxe (w/ Fries) + Choice of Soft Drink or Iced Tea.</p>
-                               <p class="card-text fw-bold mt-auto">$19.00 <span class="text-muted small">(Save $1.00)</span></p>
-                           </div>
-                       </div>
-                   </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-sm">
-                          <img
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">Burger Combo</h5>
+                  <p class="card-text">
+                    Beyond Burger Deluxe (w/ Fries) + Choice of Soft Drink or
+                    Iced Tea.
+                  </p>
+                  <p class="card-text fw-bold mt-auto">
+                    $19.00 <span class="text-muted small">(Save $1.00)</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 shadow-sm">
+                <img
                   src="media/rice-paper-rolls-1-2.jpg"
                   class="card-img-top"
                   alt="Spicy Peanut Noodles"
                   style="height: 200px; object-fit: cover"
                 />
-                           <div class="card-body d-flex flex-column">
-                               <h5 class="card-title">Bowl & Bites Combo</h5>
-                               <p class="card-text">Buddha Bowl + Crispy Spring Rolls Appetizer.</p>
-                               <p class="card-text fw-bold mt-auto">$22.00 <span class="text-muted small">(Save $2.00)</span></p>
-                           </div>
-                       </div>
-                   </div>
-                     <!-- Add more combo cards if needed -->
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">Bowl & Bites Combo</h5>
+                  <p class="card-text">
+                    Buddha Bowl + Crispy Spring Rolls Appetizer.
+                  </p>
+                  <p class="card-text fw-bold mt-auto">
+                    $22.00 <span class="text-muted small">(Save $2.00)</span>
+                  </p>
                 </div>
+              </div>
+            </div>
+            <!-- Add more combo cards if needed -->
+          </div>
         </div>
 
         <!-- Desserts Panel -->
@@ -630,67 +757,181 @@
     </main>
     <footer class="bg-light text-center text-lg-start mt-auto border-top">
       <div class="container p-4">
-          <div class="row">
-              <!-- Column 1: Restaurant Name -->
-              <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-                  <h5 class="text-uppercase">The Greenery</h5>
-                  <p>
-                      Deliciously compassionate food. Locally sourced, thoughtfully prepared right here in Vegville.
-                  </p>
-                  <a href="#rewards-section" class="btn btn-sm btn-success">Join Our Rewards!</a> <!-- Link to homepage section -->
-              </div>
-
-              <!-- Column 2: Quick Links -->
-              <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-                  <h5 class="text-uppercase">Quick Links</h5>
-                  <ul class="list-unstyled mb-0">
-                      <li><a href="menu.html" class="text-dark">Menu</a></li>
-                      <li><a href="order.html" class="text-dark">Order Online</a></li>
-                      <li><a href="process.html" class="text-dark">Our Impact</a></li>
-                      <li><a href="contact.html" class="text-dark">Contact Us</a></li>
-                  </ul>
-              </div>
-
-              <!-- === NEW Column 3: Order Delivery === -->
-              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                  <h5 class="text-uppercase">Order Delivery</h5>
-                  <p class="small">Get your favorites delivered:</p>
-                   <!-- Replace # with actual partner links -->
-                  <div class="mb-2">
-                    <i class="bi bi-truck me-1"></i> 
-                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
-                         DoorDash
-                      </a>
-                  </div>
-                   <div class="mb-2">
-                    <i class="bi bi-bag-check-fill me-1"></i> 
-                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
-                         Uber Eats
-                       </a>
-                   </div>
-                  <div>
-                    <i class="bi bi-box-seam me-1"></i> 
-                      <a href="order.html" target="_blank" rel="noopener noreferrer" class="text-dark me-2">
-                         Grubhub
-                      </a>
-                  </div>
-              </div>
-
-              <!-- Column 4: Follow Us -->
-              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                  <h5 class="text-uppercase">Follow Us</h5>
-                  <!-- Replace # with actual social links -->
-                  <a href="#" class="text-dark me-2" title="Facebook"><i class="bi bi-facebook fs-4"></i></a>
-                  <a href="#" class="text-dark me-2" title="Instagram"><i class="bi bi-instagram fs-4"></i></a>
-                  <a href="#" class="text-dark" title="Twitter/X"><i class="bi bi-twitter-x fs-4"></i></a>
-              </div>
+        <div class="row">
+          <!-- Column 1: Restaurant Name -->
+          <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">The Greenery</h5>
+            <p>
+              Deliciously compassionate food. Locally sourced, thoughtfully
+              prepared right here in Vegville.
+            </p>
+            <a href="#rewards-section" class="btn btn-sm btn-success"
+              >Join Our Rewards!</a
+            >
+            <!-- Link to homepage section -->
           </div>
+
+          <!-- Column 2: Quick Links -->
+          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Quick Links</h5>
+            <ul class="list-unstyled mb-0">
+              <li><a href="menu.html" class="text-dark">Menu</a></li>
+              <li><a href="order.html" class="text-dark">Order Online</a></li>
+              <li><a href="process.html" class="text-dark">Our Impact</a></li>
+              <li><a href="contact.html" class="text-dark">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <!-- === NEW Column 3: Order Delivery === -->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Order Delivery</h5>
+            <p class="small">Get your favorites delivered:</p>
+            <!-- Replace # with actual partner links -->
+            <div class="mb-2">
+              <i class="bi bi-truck me-1"></i>
+              <a
+                href="order.html"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="text-dark me-2"
+              >
+                DoorDash
+              </a>
+            </div>
+            <div class="mb-2">
+              <i class="bi bi-bag-check-fill me-1"></i>
+              <a
+                href="order.html"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="text-dark me-2"
+              >
+                Uber Eats
+              </a>
+            </div>
+            <div>
+              <i class="bi bi-box-seam me-1"></i>
+              <a
+                href="order.html"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="text-dark me-2"
+              >
+                Grubhub
+              </a>
+            </div>
+          </div>
+
+          <!-- Column 4: Follow Us -->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Follow Us</h5>
+            <!-- Replace # with actual social links -->
+            <a href="#" class="text-dark me-2" title="Facebook"
+              ><i class="bi bi-facebook fs-4"></i
+            ></a>
+            <a href="#" class="text-dark me-2" title="Instagram"
+              ><i class="bi bi-instagram fs-4"></i
+            ></a>
+            <a href="#" class="text-dark" title="Twitter/X"
+              ><i class="bi bi-twitter-x fs-4"></i
+            ></a>
+          </div>
+        </div>
       </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-          © 2025 The Greenery -
-          <a class="text-dark" href="sources.html">References</a>
+      <div
+        class="text-center p-3"
+        style="background-color: rgba(0, 0, 0, 0.05)"
+      >
+        © 2025 The Greenery -
+        <a class="text-dark" href="sources.html">References</a>
       </div>
-  </footer>
+    </footer>
+    <div
+      class="chat-bubble position-fixed bottom-0 end-0 mb-3 me-3 shadow rounded-circle bg-success text-white d-flex align-items-center justify-content-center"
+      id="chatToggle"
+      style="width: 60px; height: 60px; cursor: pointer; z-index: 1050"
+    >
+      <i class="bi bi-chat-dots-fill fs-3"></i>
+    </div>
+
+    <!-- Chat Window (Initially Hidden) -->
+    <div
+      class="chat-window position-fixed bottom-1 end-0 mb-3 me-3 shadow-lg bg-light rounded border"
+      id="chatWindow"
+      style="
+        width: 350px;
+        height: 450px;
+        display: none;
+        z-index: 1049;
+        flex-direction: column;
+      "
+    >
+      <!-- Header -->
+      <div
+        class="chat-header bg-success text-white p-2 d-flex justify-content-between align-items-center rounded-top"
+      >
+        <span class="fw-semibold">The Greenery Helper</span>
+        <button
+          type="button"
+          class="btn-close btn-close-white"
+          id="closeChat"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <!-- Messages Area -->
+      <div class="chat-messages p-3 flex-grow-1" style="overflow-y: auto">
+        <div class="chat-message bot mb-2">
+          <span class="p-2 rounded bg-white d-inline-block shadow-sm"
+            >Hi there! I'm The Greenery AI Assistant. Ask me anything about the
+            restaurant!</span
+          >
+        </div>
+        <!-- More messages will be added here by JS -->
+      </div>
+
+      <!-- Input Area -->
+      <div class="chat-input p-2 border-top">
+        <!-- Optional: Quick Replies -->
+        <button
+          class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
+          data-question="What are your hours?"
+        >
+          Hours?
+        </button>
+        <button
+          class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
+          data-question="Where are you located?"
+        >
+          Location?
+        </button>
+        <button
+          class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
+          data-question="Can I see the menu?"
+        >
+          Menu?
+        </button>
+        <!-- Text Input -->
+        <div class="input-group mt-1">
+          <input
+            type="text"
+            class="form-control form-control-sm"
+            placeholder="Ask something..."
+            id="chatTextInput"
+            aria-label="Chat message input"
+          />
+          <button
+            class="btn btn-success btn-sm"
+            type="button"
+            id="sendChatMsg"
+            title="Send Message"
+          >
+            <i class="bi bi-send-fill"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
