--- a/order.html
+++ b/order.html
@@ -19,7 +19,108 @@
       href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
       type="image/x-icon"
     />
-    <style></style>
+    <style>
+      /* Chat Bubble / Window */
+      .chat-bubble {
+        position: fixed;
+        bottom: 1rem;
+        right: 1rem;
+        width: 60px;
+        height: 60px;
+        background-color: #198754;
+        color: white;
+        border-radius: 50%;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        /* Use a lower, but still high z-index */
+        z-index: 1040; /* LOWER z-index */
+        transition: transform 0.2s ease-in-out;
+      }
+      .chat-bubble:hover {
+        transform: scale(1.1);
+      }
+
+      /* Make the active selector slightly more specific using 'body' */
+      body .chat-window {
+        /* Added body selector */
+        position: fixed;
+        right: 1rem;
+        bottom: 1rem; /* Default bottom */
+        width: 350px;
+        height: 450px;
+        background-color: #f8f9fa;
+        border: 1px solid #dee2e6;
+        border-radius: 0.375rem;
+        box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+        /* Use a significantly higher z-index */
+        z-index: 1060; /* HIGHER z-index */
+        display: none;
+        flex-direction: column;
+        transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out,
+          bottom 0.3s ease-in-out;
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+      /* This class is ADDED by JS to show the window */
+      body .chat-window.active {
+        /* Added body selector */
+        display: flex !important; /* Keep !important here for good measure if needed */
+        opacity: 1;
+        transform: translateY(0);
+        /* === INCREASED GAP in calculation === */
+        /* Make the gap larger (e.g., 1rem instead of 0.5rem) */
+        bottom: calc(1rem + 60px + 1rem); /* Increased gap */
+        /* =================================== */
+      }
+
+      .chat-header {
+        /* Styles for header (bg-success, text-white etc handled by Bootstrap classes) */
+        padding: 0.5rem 1rem; /* Adjust padding if needed */
+        border-top-left-radius: 0.375rem;
+        border-top-right-radius: 0.375rem;
+      }
+
+      .chat-messages {
+        padding: 1rem;
+        flex-grow: 1; /* Take up available vertical space */
+        overflow-y: auto; /* Allow scrolling for messages */
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+
+      .chat-message.bot span {
+        background-color: #e9ecef;
+        border-radius: 15px 15px 15px 0;
+        max-width: 85%;
+        padding: 0.5rem 0.75rem; /* Added padding */
+        display: inline-block; /* Needed for max-width */
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+      }
+
+      .chat-message.user {
+        text-align: right;
+      }
+
+      .chat-message.user span {
+        background-color: #d1e7dd; /* Success-subtle */
+        border-radius: 15px 15px 0 15px;
+        display: inline-block;
+        max-width: 85%;
+        text-align: left;
+        padding: 0.5rem 0.75rem; /* Added padding */
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+      }
+
+      .chat-input {
+        padding: 0.5rem;
+        border-top: 1px solid #dee2e6;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -1429,6 +1530,91 @@
         <a class="text-dark" href="sources.html">References</a>
       </div>
     </footer>
+    <div
+      class="chat-bubble position-fixed bottom-0 end-0 mb-3 me-3 shadow rounded-circle bg-success text-white d-flex align-items-center justify-content-center"
+      id="chatToggle"
+      style="width: 60px; height: 60px; cursor: pointer; z-index: 1050"
+    >
+      <i class="bi bi-chat-dots-fill fs-3"></i>
+    </div>
+
+    <!-- Chat Window (Initially Hidden) -->
+    <div
+      class="chat-window position-fixed bottom-1 end-0 mb-3 me-3 shadow-lg bg-light rounded border"
+      id="chatWindow"
+      style="
+        width: 350px;
+        height: 450px;
+        display: none;
+        z-index: 1049;
+        flex-direction: column;
+      "
+    >
+      <!-- Header -->
+      <div
+        class="chat-header bg-success text-white p-2 d-flex justify-content-between align-items-center rounded-top"
+      >
+        <span class="fw-semibold">The Greenery Helper</span>
+        <button
+          type="button"
+          class="btn-close btn-close-white"
+          id="closeChat"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <!-- Messages Area -->
+      <div class="chat-messages p-3 flex-grow-1" style="overflow-y: auto">
+        <div class="chat-message bot mb-2">
+          <span class="p-2 rounded bg-white d-inline-block shadow-sm"
+            >Hi there! I'm The Greenery AI Assistant. Ask me anything about the
+            restaurant!</span
+          >
+        </div>
+        <!-- More messages will be added here by JS -->
+      </div>
+
+      <!-- Input Area -->
+      <div class="chat-input p-2 border-top">
+        <!-- Optional: Quick Replies -->
+        <button
+          class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
+          data-question="What are your hours?"
+        >
+          Hours?
+        </button>
+        <button
+          class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
+          data-question="Where are you located?"
+        >
+          Location?
+        </button>
+        <button
+          class="btn btn-sm btn-outline-success me-1 mb-1 quick-reply-ai"
+          data-question="Can I see the menu?"
+        >
+          Menu?
+        </button>
+        <!-- Text Input -->
+        <div class="input-group mt-1">
+          <input
+            type="text"
+            class="form-control form-control-sm"
+            placeholder="Ask something..."
+            id="chatTextInput"
+            aria-label="Chat message input"
+          />
+          <button
+            class="btn btn-success btn-sm"
+            type="button"
+            id="sendChatMsg"
+            title="Send Message"
+          >
+            <i class="bi bi-send-fill"></i>
+          </button>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
