animations and improvements
TODO: blog pages

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
       rel="shortcut icon"
       href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
@@ -171,8 +172,8 @@
       </header>
     </div>
     <main class="container my-5">
-      <h1 class="text-center mb-4">Contact Us</h1>
-      <p class="text-center lead mb-5">
+      <h1 class="text-center mb-4" data-aos="fade-up">Contact Us</h1>
+      <p class="text-center lead mb-5" data-aos="fade-up">
         We'd love to hear from you! Reach out with questions, feedback,
         reservation inquiries,
         <strong class="text-success">catering requests,</strong> or just to say
@@ -181,7 +182,7 @@
 
       <div class="row g-4">
         <!-- Added gutter spacing -->
-        <div class="col-lg-6 mb-4">
+        <div class="col-lg-6 mb-4" data-aos="fade-right">
           <div class="p-4 bg-light rounded shadow-sm h-100">
             <!-- Added padding and background -->
             <h2 class="text-success mb-3">Get in Touch</h2>
@@ -262,7 +263,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 mb-4">
+        <div class="col-lg-6 mb-4" data-aos="fade-left">
           <div class="p-4 bg-light rounded shadow-sm h-100">
             <!-- Added padding and background -->
             <h2 class="text-success mb-3">Send Us a Message</h2>
@@ -631,6 +632,7 @@
         </div>
       </div>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
