--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -190,16 +191,22 @@
         </header>
       </div>
       <div class="px-4 pt-5 my-5 text-center" style="padding-bottom: 100px">
-        <h1 class="display-5 fw-bold text-white">The Greenery</h1>
+        <h1 class="display-5 fw-bold text-white" data-aos="fade-up">
+          The Greenery
+        </h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">
+          <p class="lead mb-4" data-aos="fade-up" data-aos-delay="100">
             Welcome to The Greenery, the largest Vegan-friendly restaurant in
             Central PA. Here, you'll find everything to meet your dietary needs,
             from buddha bowls filled with juicy vegetables to chocolate mousse
             that is sure to leave a sweet taste in your mouth! We do all of this
             while ensuring our committment to sustainability.
           </p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <div
+            class="d-grid gap-2 d-sm-flex justify-content-sm-center"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
             <a href="order.html"
               ><button type="button" class="btn btn-success btn-lg px-4 gap-3">
                 Order
@@ -215,7 +222,12 @@
       </div>
     </div>
     <div class="container my-5">
-      <section id="food-carousel" class="my-5">
+      <section
+        id="food-carousel"
+        class="my-5"
+        data-aos="fade-in"
+        data-aos-duration="1000"
+      >
         <div
           id="carouselExampleCaptions"
           class="carousel slide shadow rounded"
@@ -308,7 +320,7 @@
         </div>
       </section>
       <div class="row text-center mt-5">
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="0">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <i class="bi bi-egg-fried fs-1 text-success mb-3"></i>
@@ -321,7 +333,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="150">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <i class="bi bi-recycle fs-1 text-success mb-3"></i>
@@ -333,7 +345,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <i class="bi bi-geo-alt-fill fs-1 text-success mb-3"></i>
@@ -348,7 +360,7 @@
       </div>
       <section class="my-4 p-5 bg-light rounded shadow-lg">
         <div class="row align-items-center">
-          <div class="col-md-8">
+          <div class="col-md-8" data-aos="fade-left">
             <h2 class="text-success mb-3">
               Dish of the Week: Spicy Peanut Noodles
             </h2>
@@ -360,7 +372,7 @@
             <p>Available for a limited time. Try it today!</p>
             <a href="menu.html" class="btn btn-success">See Full Menu</a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right">
             <img
               src="media/Peanut-Noodles.jpg"
               alt="Spicy Peanut Noodles"
@@ -370,9 +382,11 @@
         </div>
       </section>
       <section id="testimonials" class="my-5">
-        <h2 class="text-center mb-4">What Our Customers Say</h2>
+        <h2 class="text-center mb-4" data-aos="fade-up">
+          What Our Customers Say
+        </h2>
         <div class="row">
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="0">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
@@ -386,7 +400,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="150">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
@@ -400,7 +414,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
@@ -416,9 +430,191 @@
           </div>
         </div>
       </section>
+      <section id="team-section" class="my-5 py-5 bg-light">
+        <div class="container">
+          <h2 class="text-center mb-4" data-aos="fade-up">Meet Our Team</h2>
+          <p
+            class="text-center lead mb-5 col-lg-8 mx-auto"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
+            We're a passionate group dedicated to bringing you the best
+            plant-based experience in Vegville!
+          </p>
+          <div class="row text-center">
+            <!-- Team Member 1 -->
+            <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="card h-100 shadow-sm border-0">
+                <img
+                  src="media/pexels-photo-7488995-chef1.jpg"
+                  class="card-img-top rounded-top"
+                  alt="Team Member 1 Name - Head Chef"
+                  style="
+                    height: 600px;
+                    object-fit: cover;
+                    object-position: top;
+                  "
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Alex Chen</h5>
+                  <p class="card-text text-muted">Head Chef & Founder</p>
+                  <p class="card-text small">
+                    With over 15 years of culinary experience, Alex combines
+                    classic techniques with innovative plant-based ingredients.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- Team Member 2 -->
+            <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="350">
+              <div class="card h-100 shadow-sm border-0">
+                <img
+                  src="media/pexels-photo-9025058-chef2.jpg"
+                  class="card-img-top rounded-top"
+                  alt="Team Member 2 Name - Restaurant Manager"
+                  style="
+                    height: 600px;
+                    object-fit: cover;
+                    object-position: top;
+                  "
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Ryan Smith</h5>
+                  <p class="card-text text-muted">Restaurant Manager</p>
+                  <p class="card-text small">
+                    Ryan ensures every guest has a welcoming and smooth dining
+                    experience, managing our front-of-house team.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- Team Member 3 -->
+            <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="500">
+              <div class="card h-100 shadow-sm border-0">
+                <img
+                  src="media/free-photo-of-chef-preparing-vegetables-in-modern-.jpg"
+                  class="card-img-top rounded-top"
+                  alt="Team Member 3 Name - Sustainability Coordinator"
+                  style="
+                    height: 600px;
+                    object-fit: cover;
+                    object-position: top;
+                  "
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Karen Leaf</h5>
+                  <p class="card-text text-muted">Sustainability Coordinator</p>
+                  <p class="card-text small">
+                    Karen leads our efforts in local sourcing, waste reduction,
+                    and community outreach, keeping us green!
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- === End Our Team Section === -->
+      <!-- === NEW: Blog Preview Section === -->
+      <section id="blog-preview" class="my-5 container">
+        <h2 class="text-center mb-4" data-aos="fade-up">From Our Blog</h2>
+        <p
+          class="text-center lead mb-5 col-lg-8 mx-auto"
+          data-aos="fade-up"
+          data-aos-delay="100"
+        >
+          Explore tips, recipes, and insights into the world of plant-based
+          living and sustainability.
+        </p>
+        <div class="row">
+          <!-- Blog Post Preview 1 -->
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="card h-100 shadow-sm">
+              <img
+                src="media/blog-1-img.jpg"
+                class="card-img-top"
+                alt="Blog post about seasonal vegetables"
+                style="height: 200px; object-fit: cover"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">
+                  Eating with the Seasons: Why Local Matters
+                </h5>
+                <p class="card-text small text-muted">Published: 4/8/2025</p>
+                <p class="card-text">
+                  Discover the benefits of choosing seasonal, locally-grown
+                  produce for taste, nutrition, and the environment...
+                </p>
+                <a
+                  href="blog-post-1.html"
+                  class="btn btn-outline-success mt-auto align-self-start"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+          <!-- Blog Post Preview 2 -->
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="350">
+            <div class="card h-100 shadow-sm">
+              <img
+                src="media/pantry.jpg"
+                class="card-img-top"
+                alt="Vegan pantry staples"
+                style="height: 200px; object-fit: cover"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">
+                  5 Vegan Pantry Staples for Easy Weeknight Meals
+                </h5>
+                <p class="card-text small text-muted">Published: 3/4/2025</p>
+                <p class="card-text">
+                  Stock your kitchen with these versatile plant-based
+                  ingredients for quick, delicious, and healthy dinners...
+                </p>
+                <a
+                  href="blog-post-2.html"
+                  class="btn btn-outline-success mt-auto align-self-start"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+          <!-- Blog Post Preview 3 -->
+          <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="500">
+            <div class="card h-100 shadow-sm">
+              <img
+                src="media/compost.jpg"
+                class="card-img-top"
+                alt="Compost bin"
+                style="height: 200px; object-fit: cover"
+              />
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">
+                  Beyond the Bin: Our Composting Journey
+                </h5>
+                <p class="card-text small text-muted">Published: 2/26/2025</p>
+                <p class="card-text">
+                  Learn how we turn kitchen scraps into valuable resources and
+                  reduce our landfill waste significantly...
+                </p>
+                <a
+                  href="blog-post-3.html"
+                  class="btn btn-outline-success mt-auto align-self-start"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Optional: Link to a full blog page if you plan one -->
+        <!-- <div class="text-center mt-4">
+             <a href="#" class="btn btn-success">Visit Full Blog</a>
+         </div> -->
+      </section>
       <section
         id="rewards-section"
         class="mb-5 mt-2 py-5 bg-success-subtle text-center"
+        data-aos="zoom-in"
       >
         <div class="container">
           <i class="bi bi-award-fill fs-1 text-success mb-3"></i>
@@ -438,7 +634,7 @@
           <!-- The ?subject=... prefills the subject line if they use the contact form -->
         </div>
       </section>
-      <section class="mb-5 pt-4 pb-1">
+      <section class="mb-5 pt-4 pb-1" data-aos="fade-up">
         <div class="row pb-3">
           <div class="col d-flex flex-column">
             <h2 class="mb-3">Visit Us</h2>
@@ -649,6 +845,7 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
