--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
       rel="shortcut icon"
       href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
@@ -170,7 +171,7 @@
         </ul>
       </header>
     </div>
-    <main class="container my-5">
+    <main class="container my-5" data-aos="fade-up">
       <h1 class="text-center mb-2">Our Menu</h1>
       <p class="text-center lead mb-4">
         Fresh, vibrant, and delicious plant-based dishes crafted with care.
@@ -932,6 +933,7 @@
       </div>
     </div>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
