--- a/process.html
+++ b/process.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
       rel="shortcut icon"
       href="https://cdn-icons-png.flaticon.com/512/5077/5077571.png"
@@ -178,7 +179,7 @@
       </p>
 
       <!-- Impact Statistics -->
-      <section class="my-5 p-4 bg-success-subtle rounded text-center shadow-sm">
+      <section class="my-5 p-4 bg-success-subtle rounded text-center shadow-sm" data-aos="zoom-in-up">
         <h2 class="mb-4 text-success">Our Positive Impact (Estimates)</h2>
         <div class="row">
           <div class="col-md-4 mb-3 mb-md-0">
@@ -220,7 +221,7 @@
 
       <!-- Specific Practices Sections -->
       <div class="row align-items-center my-5 py-4 border-bottom">
-        <div class="col-md-7">
+        <div class="col-md-7" data-aos="fade-right">
           <h2>
             <i class="bi bi-geo-alt-fill text-success me-2"></i>Local & Seasonal
             Sourcing
@@ -234,7 +235,7 @@
             evolves with the seasons to reflect nature's best offerings.
           </p>
         </div>
-        <div class="col-md-5 text-center">
+        <div class="col-md-5 text-center" data-aos="fade-left">
           <img
             src="media/sustainability-basket.jpg"
             alt="Basket of fresh, colorful local vegetables"
@@ -244,11 +245,28 @@
         </div>
       </div>
 
+      <div class="row align-items-center my-5 py-4 border-bottom flex-md-row-reverse">
+        <div class="col-md-7" data-aos="fade-left">
+            <h2><i class="bi bi-journal-check text-success me-2"></i>Mindful Preparation Processes</h2>
+            <p>Our commitment extends into the kitchen. We believe in letting the quality of our fresh, seasonal ingredients shine through with thoughtful preparation. We focus on:</p>
+            <ul class="list-unstyled">
+               <li class="mb-2"><i class="bi bi-check-circle text-success me-1"></i><strong>Minimally Processed:</strong> Celebrating whole foods and avoiding unnecessary additives.</li>
+               <li class="mb-2"><i class="bi bi-check-circle text-success me-1"></i><strong>In-House Creation:</strong> Crafting our own sauces, dressings, and marinades from scratch to control quality and reduce reliance on pre-packaged goods.</li>
+               <li class="mb-2"><i class="bi bi-check-circle text-success me-1"></i><strong>Nutrient Preservation:</strong> Using cooking techniques that preserve the vital nutrients in our fresh vegetables.</li>
+               <li class="mb-2"><i class="bi bi-check-circle text-success me-1"></i><strong>Low-Waste Techniques:</strong> Utilizing as much of each ingredient as possible (e.g., using vegetable scraps for broths before composting) to honor the resources used.</li>
+            </ul>
+            <p>This careful approach ensures the food we serve is not only delicious but also wholesome and respectful of its origins.</p>
+        </div>
+        <div class="col-md-5 text-center" data-aos="fade-right">
+            <img src="media/prep.jpeg" alt="Chef carefully preparing fresh vegetables" class="img-fluid rounded shadow" style="max-height: 300px;"> <!-- Add new placeholder image -->
+        </div>
+   </div>
+
       <div
         class="row align-items-center my-5 py-4 border-bottom flex-md-row-reverse"
       >
         <!-- Alternate image position -->
-        <div class="col-md-7">
+        <div class="col-md-7" data-aos="fade-right">
           <h2>
             <i class="bi bi-trash3-fill text-success me-2"></i>Waste Reduction &
             Composting
@@ -262,7 +280,7 @@
             proper sorting to maximize recycling efforts.
           </p>
         </div>
-        <div class="col-md-5 text-center">
+        <div class="col-md-5 text-center" data-aos="fade-left">
           <img
             src="media/2_Methods_of_Composting-.jpg"
             alt="Compost bin filled with vegetable scraps"
@@ -273,7 +291,7 @@
       </div>
 
       <div class="row align-items-center my-5 py-4 border-bottom">
-        <div class="col-md-7">
+        <div class="col-md-7" data-aos="fade-left">
           <h2>
             <i class="bi bi-box-seam text-success me-2"></i>Eco-Friendly
             Packaging
@@ -287,7 +305,7 @@
             solutions.
           </p>
         </div>
-        <div class="col-md-5 text-center">
+        <div class="col-md-5 text-center" data-aos="fade-right">
           <img
             src="media/sustainable-packaging.jpg"
             alt="Stack of compostable takeaway containers"
@@ -300,7 +318,7 @@
       <div
         class="row align-items-center my-5 py-4 border-bottom flex-md-row-reverse"
       >
-        <div class="col-md-7">
+        <div class="col-md-7" data-aos="fade-right">
           <h2>
             <i class="bi bi-lightbulb-fill text-success me-2"></i>Energy & Water
             Conservation
@@ -314,7 +332,7 @@
             improvement.
           </p>
         </div>
-        <div class="col-md-5 text-center">
+        <div class="col-md-5 text-center" data-aos="fade-left">
           <img
             src="media/Energy-Efficient-Light-Bulbs-scaled-e1700081978811.jpg"
             alt="Energy efficient lightbulbs or kitchen appliance"
@@ -325,7 +343,7 @@
       </div>
 
       <!-- Our Partners Section -->
-      <section class="my-5 text-center">
+      <section class="my-5 text-center" data-aos="fade-up">
         <h2 class="mb-4">Proudly Partnering With</h2>
         <div class="row justify-content-center align-items-center g-4">
           <div class="col-6 col-md-3">
@@ -389,7 +407,7 @@
       </section>
 
       <!-- Future Goals -->
-      <section class="my-5 p-4 bg-light rounded shadow-sm">
+      <section class="my-5 p-4 bg-light rounded shadow-sm" data-aos="fade-up">
         <h2 class="text-center mb-3">Looking Ahead: Our Future Goals</h2>
         <ul class="list-group list-group-flush">
           <li class="list-group-item bg-transparent">
@@ -417,7 +435,7 @@
         </ul>
       </section>
 
-      <p class="text-center mt-5">
+      <p class="text-center mt-5" data-aos="fade-up">
         We believe sustainability is an ongoing journey. If you have suggestions
         or questions about our practices, please
         <a href="contact.html">contact us</a>!
@@ -599,6 +617,7 @@
         </div>
       </div>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
