--- a/sources.html
+++ b/sources.html
@@ -10,6 +10,7 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -170,7 +171,7 @@
         </ul>
       </header>
     </div>
-    <main class="container my-5">
+    <main class="container my-5" data-aos="fade-up">
       <h1 class="text-center mb-4">Sources & Attributions</h1>
       <p class="text-center lead mb-5">
         Resources used in the creation of this website project for team
@@ -319,11 +320,9 @@
       <ul>
         <li>Text Editor: Visual Studio Code</li>
         <li>
-          Web Browser: Google Chrome / Firefox (including Developer Tools for
-          testing and debugging)
+          Web Browser: Google Chrome / Firefox
         </li>
         <li>Version Control: Git / GitHub</li>
-        <li>Image Editing: GIMP / Photoshop / Figma / Canva</li>
       </ul>
 
       <h2 class="mt-4 mb-3">Affirmation Statement</h2>
@@ -525,5 +524,6 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
